fixed routing issue

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <meta name="theme-color" content="#000000">
         <meta name="description" content="associtaion documentation">
         <title>Association - Documentation</title>
-        <script defer="defer" src="/assets/main.666b6363.js"></script>
-        <link href="/assets/main.5cb94505.css" rel="stylesheet">
+        <script defer="defer" src="./assets/main.666b6363.js"></script>
+        <link href="./assets/main.5cb94505.css" rel="stylesheet">
         <style></style>
         <style data-styled="active" data-styled-version="5.3.3"></style>
     </head>
